# airflow-local-docker

./: .env.model  .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
dags/: sample_dag.py
